# email_server

./: .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  conanfile.py  docker-compose.yml
.github/workflows/: ci.yml
cmake/: FindDependencies.cmake
common/: CMakeLists.txt
common/include/: config.hpp  logger.hpp  ssl_context.hpp
common/include/auth/: authenticator.hpp
common/include/net/: server.hpp  session.hpp
common/include/storage/: maildir.hpp
common/src/: config.cpp  logger.cpp  ssl_context.cpp
common/src/auth/: authenticator.cpp
common/src/net/: server.cpp  session.cpp
common/src/storage/: maildir.cpp
config/: server.conf.example
docker/: DEPLOYMENT.md  entrypoint.sh
imap/: CMakeLists.txt
imap/include/: imap_commands.hpp  imap_parser.hpp  imap_server.hpp  imap_session.hpp
imap/src/: imap_commands.cpp  imap_parser.cpp  imap_server.cpp  imap_session.cpp  main.cpp
imap/tests/: CMakeLists.txt  test_imap.cpp
pop3/: CMakeLists.txt
pop3/include/: pop3_commands.hpp  pop3_server.hpp  pop3_session.hpp
pop3/src/: main.cpp  pop3_commands.cpp  pop3_server.cpp  pop3_session.cpp
pop3/tests/: CMakeLists.txt  test_pop3.cpp
smtp/: CMakeLists.txt
smtp/include/: smtp_commands.hpp  smtp_relay.hpp  smtp_server.hpp  smtp_session.hpp
smtp/src/: main.cpp  smtp_commands.cpp  smtp_relay.cpp  smtp_server.cpp  smtp_session.cpp
smtp/tests/: CMakeLists.txt  test_smtp.cpp
tests/: CMakeLists.txt
tests/integration/: test_full_flow.cpp
tools/: CMakeLists.txt  create_user.cpp  generate_certs.sh
webmail/: .env.example  .env.local.example  .gitignore  Dockerfile  README.md  next.config.js  package.json  tailwind.config.ts
webmail/src/: middleware.ts
webmail/src/app/: globals.css  layout.tsx  page.tsx
webmail/src/app/(auth)/login/: page.tsx
webmail/src/app/api/auth/login/: route.ts
webmail/src/app/api/auth/logout/: route.ts
webmail/src/app/api/auth/me/: route.ts
webmail/src/app/api/auth/session/: route.ts
webmail/src/app/api/emails/: route.ts
webmail/src/app/api/emails/[uid]/: route.ts
webmail/src/app/api/folders/: route.ts
webmail/src/app/api/send/: route.ts
webmail/src/app/mail/: layout.tsx  page.tsx
webmail/src/app/mail/[folder]/: page.tsx
webmail/src/components/: Avatar.tsx  Button.tsx  ComposeModal.tsx  EmailList.tsx  EmailView.tsx  Input.tsx  Sidebar.tsx  index.ts
webmail/src/lib/: auth.ts  imap.ts  smtp.ts  utils.ts
webmail/src/types/: index.ts
